'onended' event is not received in AudioBufferSourceNode and OscillatorNode. https://bugs.webkit.org/show_bug.cgi?id=117132.

Patch by Praveen R Jadhav <praveen.j@samsung.com> on 2013-06-03
Reviewed by Christophe Dumez.

Source/WebCore:

The listener argument is a PassRefPtr which becomes NULL after the call to
setAttributeEventListener() in setOnended(). This causes the m_hasEndedListener
boolean to be incorrectly initialized. This patch reverses the two statements so
that the m_hasEndedListener is updated before the call to setAttributeEventListener().

No new tests, already covered by existing tests.

* Modules/webaudio/AudioScheduledSourceNode.cpp:
(WebCore::AudioScheduledSourceNode::setOnended):

LayoutTests:

Unskip webaudio test cases that were failing due to the 'onended' event not being fired.

* platform/efl/TestExpectations:

Canonical link: https://commits.webkit.org/135396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151101 268f45cc-cd09-0410-ab3c-d52691b4dbfc